build: remove delta-storage dependency